# intel-dk2500

./: .env.example  .gitignore  GitHub仓库准备说明.md  README.md  THIRD_PARTY_NOTICES.md  Ubuntu22.04克隆后使用说明.txt  requirements-ai.txt  requirements-venv-gemini.txt  requirements.txt  run_control_center.sh  代理配置.txt  使用手册.md  使用教程.txt  已有代码说明.md  总目标与分步目标.md  慧语灵臂——基于Intel Core Ultra的本地化具身智能机械臂系统.doc  新建 文本文档 (2).txt  新建 文本文档.txt  机械臂开发规划.md  环境配置.md  环境重建说明.md  项目方法总结.md  项目环境配置与代码说明.md  项目简介说明.md  项目结构.md  项目进度总结.md
config/: ai_agent.json  camera_structure.yaml  devices.example.json  joint_servo_map.yaml
deliverables/: An Embodied Intelligent Robotic Arm System.doc  JetArm作品设计报告.docx  JetArm作品设计报告_中文模板版.docx  ~$tArm作品设计报告.docx  中文报告模板.doc  功能演示表.doc  慧语灵臂_作品设计报告_严格模板版.docx  慧语灵臂作品简介.doc
docs/: GeminiProPlus_Windows_OpenNI资料定位.md  GeminiProPlus深度相机Windows使用说明.md  Gemini相机分步开发步骤.md  README.md  总线舵机Python控制接口.md  方案2_云端多模态大模型机械臂控制方案.md  方案3_固定物块尺寸单目测距机械臂规划方案.md  视觉闭环运动规划开发方案.md
report_build/: apply_exact_template_format.ps1  apply_template_page_grid.ps1  audit_exact_template.ps1  build_report.py  build_software_flowchart.py  build_template_report.py  inspect_body_properties.ps1  inspect_cover_spacing.ps1  report_content.md
ros2_ws/src/jetarm_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/jetarm_description/launch/: display.launch.py
ros2_ws/src/jetarm_description/rviz/: jetarm.rviz
ros2_ws/src/jetarm_description/scripts/: joint_state_mapper.py
ros2_ws/src/jetarm_description/urdf/: jetarm.urdf.xacro  jetarm_gui.urdf.xacro
src/: arm_model.py  (+4 more)
(+84 files in other folders)
