<?xml version="1.0"?>
<package format="3">
  <name>jetarm_description</name>
  <version>0.1.0</version>
  <description>Initial URDF/Xacro description for the measured JetArm prototype.</description>
  <maintainer email="user@example.com">JetArm Developer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
